Details
-
Bug
-
Resolution: Fixed
-
P0: Blocker
-
6.9.0 FF
-
None
-
091a2eae9 (dev)
Description
ASSERT: "(populates && changedIndex == Accumulator && m_state.accumulatorOut().isValid()) || (!populates && changedIndex != Accumulator)" in file /home/qt/work/qt/qtdeclarative/src/qmlcompiler/qqmljstypepropagator.cpp, line 2792 Aborted
Details: https://testresults.qt.io/coin/integration/qt/qtdoc/tasks/1724518076
Tested changes (refs/builds/qtci/dev/1724518075):
https://codereview.qt-project.org/c/qt/qtdoc/+/585636/2 Update dependencies on 'dev' in qt/qtdoc
Attachments
For Gerrit Dashboard: QTBUG-128344 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
585854,7 | Compiler: Add every instruction to populatesAccumulator | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |