Compiler: Add every instruction to populatesAccumulator

This will hopefully help catch future errors. The entries were also
sorted.

Fixes: QTBUG-128344
Change-Id: Iaf533011b046744bad6814318c803e4303cf294b
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>